Bug 398628 - Popup window does not open on Wayland after switching Virtual Desktop
Summary: Popup window does not open on Wayland after switching Virtual Desktop
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: wayland-generic (other bugs)
Version First Reported In: 5.13.5
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords: wayland-only
Depends on:
Blocks:
 
Reported: 2018-09-14 17:57 UTC by Andrius Štikonas
Modified: 2023-08-26 04:45 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Andrius Štikonas 2018-09-14 17:57:50 UTC
Start Plasma Wayland.

 * Right click on the desktop.

 * Press Ctrl+F2 to switch to another Virtual desktop.

 * Right click on Plasma panel, popup doesn't open.
Comment 1 Alexander Mentyu 2018-09-16 15:50:36 UTC
Can reproduce

Operating System: KDE neon Developer Edition
KDE Plasma Version: 5.14.80
Qt Version: 5.11.1
KDE Frameworks Version: 5.51.0
Kernel Version: 4.15.0-34-generic
OS Type: 64-bit
Processors: 8 × Intel® Core™ i5-8250U CPU @ 1.60GHz
Memory: 7,7 GiB of RAM
Comment 2 Patrick Silva 2020-06-17 15:26:46 UTC
On neon unstable only the first right-click on plasma pamel fails sometimes.

Operating System: KDE neon Unstable Edition
KDE Plasma Version: 5.19.80
KDE Frameworks Version: 5.72.0
Qt Version: 5.14.2
Comment 3 Bug Janitor Service 2023-08-21 19:29:33 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/4346
Comment 4 Vlad Zahorodnii 2023-08-22 13:25:07 UTC
Git commit 2f6f1d98221eb907f3ec89787ecd16556da76319 by Vlad Zahorodnii.
Committed on 22/08/2023 at 15:17.
Pushed by vladz into branch 'master'.

wayland: Keep popups on their parents' desktops

At the moment, popups are assigned to the current desktop and activity.
However, a toplevel can be on several virtual desktops. If user switches
between virtual desktops and the active window does not change, it can
result in not being able to dismiss or open new popups depending on the
toolkit implementation details.

To prevent that, keep popups on same virtual desktops as their parents.

M  +4    -6    src/xdgshellwindow.cpp

https://invent.kde.org/plasma/kwin/-/commit/2f6f1d98221eb907f3ec89787ecd16556da76319