wayland: Keep popups on their parents' desktops

At the moment, popups are assigned to the current desktop and activity.
However, a toplevel can be on several virtual desktops. If user switches
between virtual desktops and the active window does not change, it can
result in not being able to dismiss or open new popups depending on the
toolkit implementation details.

To prevent that, keep popups on same virtual desktops as their parents.

BUG: 398628